--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,416 @@
+@font-face {
+  font-family: 'NanumSquareB';
+  src: url('https://hashsnap-static.s3.ap-northeast-2.amazonaws.com/file/fonts/NanumSquareB.otf');
+}
+@font-face {
+  font-family: 'NanumSquareR';
+  src: url('https://hashsnap-static.s3.ap-northeast-2.amazonaws.com/file/fonts/NanumSquareR.otf');
+}
 * {
   margin: 0;
   padding: 0;
+  user-select: none;
   box-sizing: border-box;
+}
+img {
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+}
+html, body {
+  width: 100%;
+  height: 100%;
+  font-family: 'NanumSquareB';
+}
+body {
+  display: table;
+  background: #f8f8f8;
+}
+canvas {
+  width: 100% !important;
+  vertical-align: top;
+  border-radius: 10px 10px 0 0;
+}
+.page {
+  display: table-cell;
+  width: 100%;
+  height: 100%;
+  padding: 5vh 0;
+  text-align: center;
+  vertical-align: middle;
+  background: rgba(255,255,255,0.35);
+}
+.message {
+  display: inline-block;
+  font-size: 5.6vw;
+  line-height: 8.5vw;
+  padding: 2.4vh 0;
+  color: #000;
+}
+.edit-box {
+  width: 70%;
+  margin: 20px auto 0;
+  position: relative;
+  border-radius: 10px;
+  box-shadow: 0 5px 20px rgba(0,0,0, 0.35);
+}
+.edit-btns {
+  display: flex;
+  width: 100%;
+}
+.btn {
+  display: inline-block;
+  padding: 0;
+  height: 50px;
+  font-size: 16px;
+  line-height: 50px;
+  font-family: 'NanumSquareB';
+  text-transform: uppercase;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  background: none;
+  vertical-align: middle;
+}
+#image-upload {
+  position: relative;
+  flex-grow: 1;
+  color: #fff;
+  background: #EE2737;
+  border-bottom-left-radius: 10px;
+}
+#image-rotate {
+  width: 50px;
+  background: #222 url("https://hashsnap-static.s3.ap-northeast-2.amazonaws.com/file/qr-file/sync-white.svg") no-repeat center / 25px auto;
+  border-bottom-right-radius: 10px;
+}
+
+.popup {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255,255,255,0.85);
+  z-index: 99;
+}
+.popup .wrap {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  font-size: 2.5vh;
+  line-height: 6.7vw;
+  color: #000;
+  transform: translate(-50%,-50%);
+  -webkit-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  -moz-transform: translate(-50%,-50%);
+  -o-transform: translate(-50%,-50%);
+}
+.popup .icon {
+  position: relative;
+  width: 92px;
+  height: 92px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.loader-spinner div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+.loader-spinner div:before {
+  content: "";
+  display: block;
+  width: 15%;
+  height: 15%;
+  margin: 0 auto;
+  background: #000;
+  border-radius: 100%;
+  transform: translate(-50%,-50%);
+  -webkit-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  -moz-transform: translate(-50%,-50%);
+  -o-transform: translate(-50%,-50%);
+  animation: spinner 1.2s infinite ease-in-out both
+}
+.loader-spinner div:nth-child(2) {
+  transform: rotate(30deg);
+  -webkit-transform: rotate(30deg);
+  -ms-transform: rotate(30deg);
+  -moz-transform: rotate(30deg);
+  -o-transform: rotate(30deg);
+}
+.loader-spinner div:nth-child(2)::before {
+  animation-delay: -1.1s;
+}
+.loader-spinner div:nth-child(3) {
+  transform: rotate(60deg);
+  -webkit-transform: rotate(60deg);
+  -ms-transform: rotate(60deg);
+  -moz-transform: rotate(60deg);
+  -o-transform: rotate(60deg);
+}
+.loader-spinner div:nth-child(3)::before {
+  animation-delay: -1s;
+}
+.loader-spinner div:nth-child(4) {
+  transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+}
+.loader-spinner div:nth-child(4)::before {
+  animation-delay: -0.9s;
+}
+.loader-spinner div:nth-child(5) {
+  transform: rotate(120deg);
+  -webkit-transform: rotate(120deg);
+  -ms-transform: rotate(120deg);
+  -moz-transform: rotate(120deg);
+  -o-transform: rotate(120deg);
+}
+.loader-spinner div:nth-child(5)::before {
+  animation-delay: -0.8s;
+}
+.loader-spinner div:nth-child(6) {
+  transform: rotate(150deg);
+  -webkit-transform: rotate(150deg);
+  -ms-transform: rotate(150deg);
+  -moz-transform: rotate(150deg);
+  -o-transform: rotate(150deg);
+}
+.loader-spinner div:nth-child(6)::before {
+  animation-delay: -0.7s;
+}
+.loader-spinner div:nth-child(7) {
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+}
+.loader-spinner div:nth-child(7)::before {
+  animation-delay: -0.6s;
+}
+.loader-spinner div:nth-child(8) {
+  transform: rotate(210deg);
+  -webkit-transform: rotate(210deg);
+  -ms-transform: rotate(210deg);
+  -moz-transform: rotate(210deg);
+  -o-transform: rotate(210deg);
+}
+.loader-spinner div:nth-child(8)::before {
+  animation-delay: -0.5s;
+}
+.loader-spinner div:nth-child(9) {
+  transform: rotate(240deg);
+  -webkit-transform: rotate(240deg);
+  -ms-transform: rotate(240deg);
+  -moz-transform: rotate(240deg);
+  -o-transform: rotate(240deg);
+}
+.loader-spinner div:nth-child(9)::before {
+  animation-delay: -0.4s;
+}
+.loader-spinner div:nth-child(10) {
+  transform: rotate(270deg);
+  -webkit-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  -moz-transform: rotate(270deg);
+  -o-transform: rotate(270deg);
+}
+.loader-spinner div:nth-child(10)::before {
+  animation-delay: -0.3s;
+}
+.loader-spinner div:nth-child(11) {
+  transform: rotate(300deg);
+  -webkit-transform: rotate(300deg);
+  -ms-transform: rotate(300deg);
+  -moz-transform: rotate(300deg);
+  -o-transform: rotate(300deg);
+}
+.loader-spinner div:nth-child(11)::before {
+  animation-delay: -0.2s;
+}
+.loader-spinner div:nth-child(12) {
+  transform: rotate(330deg);
+  -webkit-transform: rotate(330deg);
+  -ms-transform: rotate(330deg);
+  -moz-transform: rotate(330deg);
+  -o-transform: rotate(330deg);
+}
+.loader-spinner div:nth-child(12)::before {
+  animation-delay: -0.1s;
+}
+@keyframes spinner {
+  0% {
+    transform: scale(0);
+    -webkit-transform: scale(0);
+    -ms-transform: scale(0);
+    -moz-transform: scale(0);
+    -o-transform: scale(0);
+  }
+  10% {
+    transform: scale(0);
+    -webkit-transform: scale(0);
+    -ms-transform: scale(0);
+    -moz-transform: scale(0);
+    -o-transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    -moz-transform: scale(1);
+    -o-transform: scale(1);
+  } 
+  90% {
+    transform: scale(0);
+    -webkit-transform: scale(0);
+    -ms-transform: scale(0);
+    -moz-transform: scale(0);
+    -o-transform: scale(0);
+  }
+  100% {
+    transform: scale(0);
+    -webkit-transform: scale(0);
+    -ms-transform: scale(0);
+    -moz-transform: scale(0);
+    -o-transform: scale(0);
+  }
+}
+
+.error,
+.warning {
+  border-radius: 100%;
+  margin-bottom: 15px;
+  animation: error 0.5s ease-in-out;
+}
+.error {
+  border: 7px solid rgba(209,43,38,0.5);
+}
+.warning {
+  border: 7px solid rgba(255,139,7,0.5);
+}
+.error-mark,
+.warning-mark {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+.error-mark:before,
+.error-mark:after {
+  content: "";
+  display: block;
+  width: 60%;
+  height: 8px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-top: -4px;
+  margin-left: -30%;
+  background: #d12b26;
+}
+.error-mark:before {
+  animation: error-mark-left 0.5s both 0.3s;
+}
+.error-mark:after {
+  animation: error-mark-right 0.5s both 0.3s;
+}
+@keyframes error {
+  0% {
+    transform: rotateX(100deg); 
+    -webkit-transform: rotateX(100deg);
+    -ms-transform: rotateX(100deg);
+    -moz-transform: rotateX(100deg);
+    -o-transform: rotateX(100deg);
+    opacity: 0;
+  }
+  100% {
+    transform: rotateX(0deg); 
+    -webkit-transform: rotateX(0deg);
+    -ms-transform: rotateX(0deg);
+    -moz-transform: rotateX(0deg);
+    -o-transform: rotateX(0deg);
+    opacity: 1;
+  }
+}
+@keyframes error-mark-left {
+  0% {
+    transform: rotate(0); 
+    opacity: 0;
+  }
+  100% {
+    transform: rotate(45deg); 
+    opacity: 1;
+  }
+}
+@keyframes error-mark-right {
+  0% {
+    transform: rotate(0); 
+    opacity: 0;
+  }
+  100% {
+    transform: rotate(-45deg); 
+    opacity: 1;
+  }
+}
+
+.warning-mark {
+  animation: warning-mark 0.8s ease-in-out;
+}
+.warning-mark:before,
+.warning-mark:after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 50%;
+  margin-left: -4px;
+  background: #ffc107;
+}
+.warning-mark:before {
+  width: 8px;
+  height: 50%;
+  top: 12px;
+}
+.warning-mark::after {
+  width: 8px;
+  height: 8px;
+  bottom: 12px;
+  border-radius: 100%;
+}
+@keyframes warning-mark {
+  0% {
+    transform: scale(0); 
+    -webkit-transform: scale(0);
+    -ms-transform: scale(0);
+    -moz-transform: scale(0);
+    -o-transform: scale(0);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(2); 
+    -webkit-transform: scale(2);
+    -ms-transform: scale(2);
+    -moz-transform: scale(2);
+    -o-transform: scale(2);
+    opacity: 0.5;
+  }
+  100% {
+    transform: scale(1); 
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    -moz-transform: scale(1);
+    -o-transform: scale(1);
+    opacity: 1;
+  }
 }
